--- a/src/movie_details.css
+++ b/src/movie_details.css
@@ -1,163 +1,186 @@
-.viedo{
-    margin-left: 34%;
+.myControlClassName {
+  width: 20rem !important;
+  background: #eee !important;
+  border-radius: 0.5rem;
 }
-.movie-container{
-    height: 'auto';
-    left: '0';
-     width: '32%';
-      z-index: 2;
-       margin-left: '33%'; 
-       margin-top: '9%'
+
+.labelInputWrapper {
+  width: 40rem;
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem;
 }
-#con-select{
+
+.formInput {
+  width: 20rem;
+  border-radius: 0.5rem;
+}
+
+.formLabel {
+  width: 10rem;
+  align-self: center;
+}
+
+/* css de mai jos era deja aici */
+.viedo {
+  margin-left: 34%;
+}
+.movie-container {
+  height: "auto";
+  left: "0";
+  width: "32%";
+  z-index: 2;
+  margin-left: "33%";
+  margin-top: "9%";
+}
+#con-select {
   color: white;
-   width: 24%;
-    background-color: #ff4b2b;
-     margin-left: 57%;
-      border-radius: 20px;
-}
-.retrieve-form{
-      background: rgb(246, 245, 247) none repeat scroll 0% 0%;
-    width: max-content;
-    margin-top: inherit;
-    margin-left: -28%;
-}
-.pick-ceats{
+  width: 24%;
   background-color: #ff4b2b;
-   color: white;
-    width: 29%;
-     margin-left: 71%;
-      border-radius: 20px;
+  margin-left: 57%;
+  border-radius: 20px;
 }
-#retrieve-card{
-  padding: 80px; 
+.retrieve-form {
+  background: rgb(246, 245, 247) none repeat scroll 0% 0%;
+  width: max-content;
+  margin-top: inherit;
   margin-left: -28%;
 }
-.ceat-pick{
+.pick-ceats {
+  background-color: #ff4b2b;
+  color: white;
+  width: 29%;
+  margin-left: 71%;
+  border-radius: 20px;
+}
+#retrieve-card {
+  padding: 80px;
+  margin-left: -28%;
+}
+.ceat-pick {
   width: 100%;
   margin-left: -2%;
 }
-.ticket-booking{
-    height: 'auto';
-     left: '0';
-      width: '32%';
-       z-index: 2; 
-       margin-left: '33%';
-        margin-top: '9%';
+.ticket-booking {
+  height: "auto";
+  left: "0";
+  width: "32%";
+  z-index: 2;
+  margin-left: "33%";
+  margin-top: "9%";
 }
 @media only screen and (max-width: 600px) {
   .viedo {
     margin-left: auto;
   }
-  .movie-container{
-      width:max-content;
-      margin-left: auto;
+  .movie-container {
+    width: max-content;
+    margin-left: auto;
   }
-  .ticket-booking{
-      width: max-content;
-      margin-left: auto;
+  .ticket-booking {
+    width: max-content;
+    margin-left: auto;
   }
-  .feedback-form{
+  .feedback-form {
     position: absolute;
-top: 0px;
-height: inherit;
-left: -186px;
-width: 32%;
-z-index: 2;
-margin-left: auto;
-margin-top: 9%;
+    top: 0px;
+    height: inherit;
+    left: -186px;
+    width: 32%;
+    z-index: 2;
+    margin-left: auto;
+    margin-top: 9%;
   }
-  #navbar{
+  #navbar {
     padding-left: 116px;
   }
-  .feedback{
+  .feedback {
     margin-top: -124px;
     margin-left: -73px;
   }
-  .col-4{
+  .col-4 {
     margin-top: 29px;
   }
-  .profile{
+  .profile {
     padding-top: -1px;
   }
-  #pro-nav{
+  #pro-nav {
     margin-top: -157px;
   }
-  #dashboard{
+  #dashboard {
     width: auto;
   }
-  .stats{
+  .stats {
     padding-left: 16px;
   }
-  #table-nav{
+  #table-nav {
     position: fixed;
     padding-right: 29px;
-   padding-left: 410px;
-padding-top: 37px;
+    padding-left: 410px;
+    padding-top: 37px;
   }
-  .seatStructure{
+  .seatStructure {
     width: inherit;
     margin-left: -284px;
   }
-  #movie-table{
+  #movie-table {
     width: min-content;
   }
-  #movie-table-card{
+  #movie-table-card {
     margin-left: 136px;
   }
-  .card-title{
+  .card-title {
     margin-left: 140px;
   }
- #card-category{
+  #card-category {
     margin-left: 140px;
   }
 
-#admin-book-nav{
-  padding-left: 130px;
-}
-.retrieve-bookings{
-  margin-left: 5px;
-}
-.retrieve-form{
-  margin-left: -196px;
-  margin-top: 50px;
-}
-#retrieve-card{
-  margin-left: -100px;
- padding: 25px;
-}
-#upload{
-  padding-left: 133px;
-}
-.upload-font{
-  font-size: 1.25rem;
-}
-.upload-form{
-width: max-content;
-margin-left: -50%;
-}
-.ceat-pick{
-  width: 50%;
-  margin-left: 24%;
-}
-.pick-ceats{
-  background-color: rgb(255, 75, 43);
-color: white;
-width: 48%;
-margin-left: 0%;
-border-radius: 20px;
-}
-#con-select{
-  color: white;
-width: 125%;
-background-color: rgb(255, 75, 43);
-margin-left: 114%;
-border-radius: 20px;
-}
-.alert-message{
-  margin-bottom: 0px;
-background: yellow;
-margin-right: -279px;
-}
-
+  #admin-book-nav {
+    padding-left: 130px;
+  }
+  .retrieve-bookings {
+    margin-left: 5px;
+  }
+  .retrieve-form {
+    margin-left: -196px;
+    margin-top: 50px;
+  }
+  #retrieve-card {
+    margin-left: -100px;
+    padding: 25px;
+  }
+  #upload {
+    padding-left: 133px;
+  }
+  .upload-font {
+    font-size: 1.25rem;
+  }
+  .upload-form {
+    width: max-content;
+    margin-left: -50%;
+  }
+  .ceat-pick {
+    width: 50%;
+    margin-left: 24%;
+  }
+  .pick-ceats {
+    background-color: rgb(255, 75, 43);
+    color: white;
+    width: 48%;
+    margin-left: 0%;
+    border-radius: 20px;
+  }
+  #con-select {
+    color: white;
+    width: 125%;
+    background-color: rgb(255, 75, 43);
+    margin-left: 114%;
+    border-radius: 20px;
+  }
+  .alert-message {
+    margin-bottom: 0px;
+    background: yellow;
+    margin-right: -279px;
+  }
 }
