--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -15985,20 +15985,21 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .wrapper {
+  display: flex;
   position: relative;
   padding: 0 12px;
   top: 0;
   height: 100vh;
-  background-color: #000000;
+  /* background-color: #000000; */
 }
 
 .sidebar {
-  position: fixed;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
   z-index: 2;
-  width: 260px;
+  width: 200px;
   background: #fff;
   box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56),
     0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
@@ -16024,7 +16025,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   position: relative;
   height: calc(100vh - 75px);
   overflow: auto;
-  width: 260px;
+  width: 200px;
   z-index: 4;
   padding-bottom: 30px;
 }
@@ -16239,7 +16240,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   padding-right: 10px;
   text-transform: capitalize;
   font-size: 13px;
-  padding: 10px 15px;
+  padding: 6px 10px;
 }
 
 .sidebar .sidebar-background {
@@ -16502,13 +16503,6 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 .off-canvas-sidebar .navbar-collapse .nav > li > a:focus,
 .off-canvas-sidebar .navbar-collapse .nav > li > a:hover {
   background: rgba(200, 200, 200, 0.2);
-}
-
-.main-panel {
-  position: relative;
-  float: right;
-  width: calc(100% - 260px);
-  transition: 0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 
 .main-panel > .content {
