--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   background: #f6f5f7;
   display: flex;
   justify-content: center;
@@ -13,7 +13,7 @@ body {
   font-family: "Montserrat", sans-serif;
   height: 100vh;
   margin: -20px 0 50px;
-}
+} */
 
 h1 {
   font-weight: bold;
