--- a/src/admin/adminPage.css
+++ b/src/admin/adminPage.css
@@ -2,3 +2,10 @@
   display: flex;
   flex-direction: row;
 }
+
+.row-wrapper {
+  margin: 12px;
+  margin-left: 212px;
+  display: flex;
+  flex-direction: column;
+}
