--- a/src/bookingform.css
+++ b/src/bookingform.css
@@ -1,105 +1,89 @@
-
-#Username
-{
-  border:none;
-  border-bottom:1px solid;
+#Username {
+  border: none;
+  border-bottom: 1px solid;
 }
 
-.screen
-{
-  width:100%;
-  height:20px;
-  background:#4388cc;
-  color:#fff;
-  line-height:20px;
-  font-size:15px;
+.screen {
+  width: 100%;
+  height: 20px;
+  background: #4388cc;
+  color: #fff;
+  line-height: 20px;
+  font-size: 15px;
 }
 
-.smallBox::before
-{
-  content:".";
-  width:15px;
-  height:15px;
-  float:left;
-  margin-right:10px;
+.smallBox::before {
+  content: ".";
+  width: 15px;
+  height: 15px;
+  float: left;
+  margin-right: 10px;
 }
-.greenBox::before
-{
-  content:"";
-  background:Green;
+.greenBox::before {
+  content: "";
+  background: Green;
 }
-.redBox::before
-{
-  content:"";
-  background:Red;
+.redBox::before {
+  content: "";
+  background: Red;
 }
-.emptyBox::before
-{
-  content:"";
-  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
-    background-color:#ccc;
+.emptyBox::before {
+  content: "";
+  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, 0.3),
+    0px 1px 0px 0px rgba(255, 255, 255, 0.8);
+  background-color: #ccc;
 }
 
-.seats
-{
-  border:1px solid red;background:yellow;
-} 
-
-
-
-.seatGap
-{
-  width:40px;
+.seats {
+  border: 1px solid red;
+  background: yellow;
 }
 
-.seatVGap
-{
-  height:40px;
+.seatGap {
+  width: 40px;
 }
 
-table
-{
-  text-align:center;
+.seatVGap {
+  height: 40px;
+}
+
+table {
+  text-align: center;
   margin-left: 8%;
 }
 
-
-.Displaytable
-{
-  text-align:center;
+.Displaytable {
+  text-align: center;
 }
-.Displaytable td, .Displaytable th {
-    border: 1px solid;
-    text-align: left;
-}
-
-textarea
-{
-  border:none;
-  background:transparent;
+.Displaytable td,
+.Displaytable th {
+  border: 1px solid;
+  text-align: left;
 }
 
-
-
-input[type=checkbox] {
-    width:15px;
-    margin-right:18px;
+textarea {
+  border: none;
+  background: transparent;
 }
 
-input[type=checkbox]:before {
-    content: "";
-    width: 15px;
-    height: 15px;
-    display: inline-block;
-    vertical-align:middle;
-    text-align: center;
-    box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
-    background-color:#ccc;
+input[type="checkbox"] {
+  width: 15px;
+  margin-right: 18px;
+}
+
+input[type="checkbox"]:before {
+  content: "";
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, 0.3),
+    0px 1px 0px 0px rgba(255, 255, 255, 0.8);
+  background-color: #ccc;
 }
 
 input[type="checkbox"]:checked:before {
-    background-color:Green;
-    font-size: 15px;
+  background-color: Green;
+  font-size: 15px;
 }
-
-
