--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -1023,7 +1023,7 @@ pre code {
 }
 
 .container-fluid {
-  width: 148%;
+  width: 100vw;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -16245,7 +16245,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 
 .sidebar .sidebar-background {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   height: 100%;
   width: 100%;
   display: block;
@@ -16506,7 +16506,6 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .main-panel > .content {
-  margin-left: 212px;
   width: 100%;
 }
 
@@ -18908,7 +18907,7 @@ html[dir="rtl"] .form-check .form-check-sign .check:before {
 .card [class*="card-header-"] .card-text {
   border-radius: 3px;
   background-color: #999999;
-  padding: 15px;
+  padding-bottom: 10px;
   margin-top: -20px;
   margin-right: 15px;
   float: left;
